--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,11 +3,7 @@
     padding:0;
 }
 body{
-    background-image:url("../Assets/background.jpg");
-    background-size:cover;
-    background-attachment: fixed;
-    
-    background-color:#020100; /*Para redes lentas, caso demore carregar o background image*/
+    background-color:#020100;
 
     font-family: 'Signika Negative', sans-serif;
 }
