--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,7 +123,9 @@ color:white;
 footer{
     max-width: 100%;
     height:200px;
-    background-color:black;
+    background-image:url(../Assets/background.jpg);
+    background-size:cover;
+    background-attachment: fixed;
 
     position:relative;
 }
