--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ color:white;
 
 }
 
-footer{
+.rodape{
     max-width: 100%;
     height:200px;
     background-image:url(../Assets/background.jpg);
