--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ color:white;
 
 }
 
-.rodape{
+footer{
     max-width: 100%;
     height:200px;
     background-image:url(../Assets/background.jpg);
@@ -129,15 +129,29 @@ color:white;
 
     position:relative;
 }
-.lnk{
-    width: 80px;
-    height: 80px;
+ul{
+    list-style-type: none;
+    list-style-position: inside;
 
     position:absolute;
     top:50%;
     left:50%;
     transform:translate(-50%, -50%);
+}
+li{
+   display:inline-block;
+}
 
+.icone{
+    width: 80px;
+    height: 80px;
+
+}
+#sugestao{
+    padding-bottom:5%;
+    font-size:20px;
+    text-align:center;
+    color:red;
 }
 /* Aqui começam as medias queries ----------------------------------------------------------*/
 
@@ -174,13 +188,18 @@ color:white;
         .container{
             max-width: 160px;
         
-        }   
+        }  
     
         p { font-size:15px;}
 
         input, input::placeholder,#resultado, #resultado p {
             font-size:13px;
         
+        }
+        #sugestao{
+
+            font-size:16px;
+
         }
         
 
